--- a/wordprediction.ipynb
+++ b/wordprediction.ipynb
@@ -12,6 +12,25 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TL10Dww38ks4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Fastino Mateteva\n",
+        "R205684K**"
+      ],
+      "metadata": {
+        "id": "uFWZEGPU8d59"
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "VHHvLPffBnZ4"
@@ -29,6 +48,20 @@
         "import pandas as pd\n",
         "import os "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "N7Zo_UhY8ba3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "DsVC2gpP8cno"
+      }
     },
     {
       "cell_type": "code",
@@ -150,7 +183,7 @@
         "sequences = []\n",
         "\n",
         "for i in range(5, len(sequence_data)):\n",
-        "  words = sequence_data[i-3:i+1]\n",
+        "  words = sequence_data[i-5:i+1]\n",
         "  sequences.append(words)\n",
         "\n",
         "print(\"The Length of sequences are: \", len(sequences))\n",
@@ -169,8 +202,8 @@
         "x = []\n",
         "y = []\n",
         "for i in sequences:\n",
-        "   x.append(i[0:3])\n",
-        "   y.append(i[3])\n",
+        "   x.append(i[0:5])\n",
+        "   y.append(i[5])\n",
         "x = np.array(x)\n",
         "y = np.array(y)"
       ]
@@ -219,7 +252,7 @@
       "source": [
         "from keras.models import Sequential\n",
         "model = Sequential ()\n",
-        "model.add(Embedding(vocab_size, 10, input_length=3))\n",
+        "model.add(Embedding(vocab_size, 10, input_length=5))\n",
         "model.add(LSTM(1000, return_sequences=True))\n",
         "model.add(LSTM(1000))\n",
         "model.add(Dense(1000, activation=\"relu\"))\n",
